<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:background="@drawable/login_shape_1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title_login"
            android:text="@string/smart_health_care"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_login_slogan"
            android:text="An All-in-One Patient Engagement Solution"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_below="@+id/tv_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/image_view_login"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/content_desc"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
<!--        <LinearLayout-->
<!--            android:layout_below="@+id/tv_title_login"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center">-->
<!--            <ImageView-->
<!--                android:id="@+id/image_view_login"-->
<!--                android:contentDescription="@string/content_desc"-->
<!--                android:layout_width="60dp"-->
<!--                android:layout_height="60dp"/>-->
<!--        </LinearLayout>-->
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/login_bg"
                android:padding="10dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerSelectLoginMood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/view"/>

                <EditText
                    android:id="@+id/etEmailLogin"
                    android:hint="@string/enter_email"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_field_shape"
                    android:layout_marginTop="30dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/etPasswordlLogin"
                    android:hint="@string/enter_password"
                    android:padding="10dp"
                    android:background="@drawable/edit_text_field_shape"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textWebPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvForgotPassLogin"
                    android:text="@string/forgot_password"
                    android:textSize="16sp"
                    android:textAlignment="textEnd"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_custom_shape"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/don_t_you_have_an_account"
                        android:textColor="@color/hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvRegister"
                        android:text="@string/register"
                        android:layout_marginStart="10dp"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>