<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/login_bg"
            android:paddingTop="30dp"
            android:paddingBottom="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/tv_custom_dialog_schedule_title"
                android:text="Set Schedule"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:id="@+id/viewSchedule_id"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000"/>
            <ProgressBar
                android:id="@+id/progressCustom_schedule"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="true"
                android:indeterminateOnly="true"
                android:indeterminateBehavior="repeat"
                android:indeterminateTint="@color/colorAccent"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvCreateScheduleSelectDate"
                android:text="@string/select_date"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/textview_custom_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvCreateScheduleSelectStartTime"
                android:text="@string/select_start_time"
                android:textColor="@color/black"
                android:background="@drawable/textview_custom_shape"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvCreateScheduleSelectEndTime"
                android:text="@string/select_end_time"
                android:textColor="@color/black"
                android:background="@drawable/textview_custom_shape"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/btnCall_schedule_dialogId"
                    android:text="Cancel"
                    android:background="@drawable/button_custom_shape"
                    android:textColor="@color/white"
                    android:layout_marginEnd="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnCreateSchedule_custom_dialog"
                    android:text="Create"
                    android:background="@drawable/button_custom_shape"
                    android:textColor="@color/white"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>