<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:paddingBottom="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical"
            android:background="@color/login_bg">

            <TextView
                android:id="@+id/tv_custom_dialog_set_default_value_title"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:id="@+id/viewSetValue_id"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000"/>
            <ProgressBar
                android:id="@+id/progressCustom_set_val"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="true"
                android:indeterminateOnly="true"
                android:indeterminateBehavior="repeat"
                android:indeterminateTint="@color/colorAccent"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="5">
                <EditText
                    android:id="@+id/etBpUpDetails_set_val"
                    android:text=""
                    android:hint="BP Up"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:background="@drawable/patient_home_et_shape"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="2.4"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="/"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/etBpDownDetails_set_val"
                    android:text=""
                    android:background="@drawable/patient_home_et_shape"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"
                    android:hint="BP Down"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:layout_width="0dp"
                    android:layout_weight="2.4"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:id="@+id/etTemperature_set_val"
                android:hint="@string/temperature_c"
                android:padding="10dp"
                android:background="@drawable/patient_home_et_shape"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etSpo2_set_val"
                android:hint="SPO2"
                android:background="@drawable/patient_home_et_shape"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etEcg_set_val"
                android:hint="ECG  (ok / not ok)"
                android:background="@drawable/patient_home_et_shape"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etGlBfr_set_val"
                android:hint="@string/before_eating_glucose"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:background="@drawable/patient_home_et_shape"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/etGlAftr_set_val"
                android:hint="@string/after_eating_glucose"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:background="@drawable/patient_home_et_shape"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/btnCall_set_val_dialogId"
                    android:text="Cancel"
                    android:background="@drawable/button_custom_shape"
                    android:textColor="@color/white"
                    android:layout_marginEnd="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btnSubmit_custom_dialog_set_val"
                        android:text="Submit"
                        android:background="@drawable/button_custom_shape"
                        android:textColor="@color/white"
                        android:layout_marginStart="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/btnUpdate_custom_dialog_set_val"
                        android:text="Update"
                        android:visibility="gone"
                        android:background="@drawable/button_custom_shape"
                        android:textColor="@color/white"
                        android:layout_marginStart="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>